--- a/package.json
+++ b/package.json
@@ -67,5 +67,5 @@
   "bugs": {
     "url": "https://github.com/MauricioRobayo/switch-emoji/issues"
   },
-  "homepage": "https://www.mauriciorobayo.com/switch-emoji#readme"
+  "homepage": "https://www.mauriciorobayo.com/switch-emoji"
 }
