chore: add Twemoji keyword
Signed-off-by: Mauricio Robayo <rfmajo@gmail.com>

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react",
     "emoji",
     "twitter",
-    "github"
+    "github",
+    "twemoji"
   ],
   "name": "switch-emoji",
   "author": "Mauricio Robayo",
